# libodb

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  bootstrap  configure.ac  libodb.info.in  libodb.spec.in
config/: README
debian/: changelog  control  copyright  libodb-dev.install  rules  watch
m4/: README
src/: Makefile.am  datablock.h  odb.cpp  odb.h  ofile.cpp  ofile.h  tst.cpp
testing/: Makefile  Makefile.am  Makefile.in  aaa.cpp  bbb.cpp  endian.c  fix_residue_pointers  fix_residue_pointers.cpp  odbcat.cpp  odbdir.cpp  sss.cpp  testodb1  testodb1.cpp  testodb2  testodb2.cpp  ttt.cpp
testing/.deps/: fix_residue_pointers.Po  odb.Po  testodb1-odb.Po  testodb1.Po  testodb2-ofile.Po  testodb2.Po
