## -*- mode: Makefile ; mode: font-lock -*-
## $Id: Makefile.am 292 2006-03-17 08:44:58Z mok $

# Build in these directories
SUBDIRS = src testing

ACLOCAL_AMFLAGS = -I config

#Distribute these directories:
DIST_SUBDIRS = $(SUBDIRS)

pkgconfigdir = $(libdir)/config

EXTRA_DIST = bootstrap libodb.spec libodb.info COPYING AUTHORS

####

