## -*- mode: Makefile ; mode: font-lock -*-
## $Id$

AM_CPPFLAGS = -I$(top_srcdir)/src
AM_LDFLAGS = -static $(top_srcdir)/src/libodb.la

noinst_PROGRAMS = fix_residue_pointers testodb1 testodb2

fix_residue_pointers_SOURCES = fix_residue_pointers.cpp

testodb1_SOURCES =  testodb1.cpp

testodb2_SOURCES =  testodb2.cpp



####
